--- a/app/templates/corso_elem.html
+++ b/app/templates/corso_elem.html
@@ -12,7 +12,7 @@
 					{%- set num_iscritti = corso.iscritti|length -%}
                     <div><div class="col s2"><b>Descrizione:</b></div><div class="col s10">{{ corso.descrizione }}</div></div>
                     <div><div class="col s4"><b>Categoria:</b></div><div class="col s8">{{ corso.categoria }}</div></div>
-                    <div><div class="col s4"><b>Durata corso:</b></div><div class="col s8">{{ corso.durata }}</div></div>
+                    <div><div class="col s4"><b>Durata corso:</b></div><div class="col s8">{{ corso.durata }} ore</div></div>
                     <div><div class="col s4"><b>Periodo:</b></div><div class="col s8">{{ corso.periodo }}</div></div>
                     <div><div class="col s4"><b>Modalita:</b></div><div class="col s8">{{ corso.modalita|prova }}</div></div>
                     <div><div class="col s4"><b>Dipartimento:</b></div><div class="col s8">{{ corso.iddipartimento }}</div></div>
