--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,14 +7,8 @@
 	<link rel='stylesheet' href='https://www.w3schools.com/w3css/4/w3.css'>
 	<script src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script>
 
-
-
-
 	<!-- Compiled and minified CSS -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
-	<!-- Compiled and minified JavaScript -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
 	<!-- Material Icon-->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -104,5 +98,10 @@
 	{% block base_javascript %}{% endblock %}
 
 </body>
+
+<!-- Compiled and minified JavaScript -->
+<!-- lasciare qua! se metto nell'head non fa funzionare il type range-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
 
 </html>
