--- a/app/templates/form_element.html
+++ b/app/templates/form_element.html
@@ -42,47 +42,36 @@
 
 {%- else -%}
 	
-	{%- if element.name == 'inizioiscrizioni' or  element.name == 'scadenzaiscrizioni' -%}  
-	
-	<input 
-		name="{{ class_name }}.{{ element.name }}"
-		type="text" 
-		class = "{{ element.name }} validate"
-		{% if not element.optional and not corso %} required=True {% endif %}
-			{% if corso -%}
-				{%- set date = corso[element.name] -%}
-				value="{{ date.strftime('%Y/%m/%d %H:%M') }}"
-			{%- endif -%}
-		autocomplete="off">
-	{%- else -%}
 
-		{%- if class_name == "Corsi" and element.name == "durata" -%}
-			<p class="range-field">
-				<input 
-					id=	{{ element.name }} 
-			
-					name="{{ class_name }}.{{ element.name }}"
-					type = "range" 
-					class = "validate"
-					min="0" max="500" 
-					onchange="$('~ output', this).val(value)" 
-					oninput="$('~ output', this).val(value)"
 
-					{% if not element.optional and not corso %} required=True {% endif %}
-						{% if corso -%}
-							value="{{ corso[element.name] }}"
-						{%- else -%}
-							value = "0"
-						{%- endif -%}
-					autocomplete="off"
-					/>
+	{%- if class_name == "Corsi" and element.name == "durata" -%}
+		<p class="range-field">
+			<input 
+				id=	{{ element.name }} 
+		
+				name="{{ class_name }}.{{ element.name }}"
+				type = "range" 
+				class = "validate"
+				min="0" max="500" 
+				onchange="$('~ output', this).val(value)" 
+				oninput="$('~ output', this).val(value)"
+
+				{% if not element.optional and not corso %} required=True {% endif %}
+					{% if corso -%}
+						value="{{ corso[element.name] }}"
+					{%- else -%}
+						value = "0"
+					{%- endif -%}
+				autocomplete="off"
+			/>
 						
-						durate selezionata: 
-						<output>{% if corso -%}{{ corso[element.name] }}
-						{%- else -%} 0  
-						{%- endif -%}</output> ore
+			durate selezionata: 
+			<output>{% if corso -%}{{ corso[element.name] }}
+					{%- else -%} 0  
+					{%- endif -%}
+			</output> ore
 		</p>
-		{%- else -%}
+	{%- else -%}
 
 		<input 
 			id=	{{ element.name }} 
@@ -98,6 +87,10 @@
 
 			class = 
 			{%- if element.isDatetime and class_name == "Lezioni"  -%} 	"datetimecool validate" 
+			{%- elif element.isDatetime and
+				(element.name == 'inizioiscrizioni' or 
+				element.name == 'scadenzaiscrizioni') -%} "{{ element.name }} validate"
+
 			{%- elif element.isTimedelta -%} 	"timepicker validate"
 			{%- elif element.isDate -%}			"datepicker validate"
 			{%- else -%} 						"validate"
@@ -121,9 +114,8 @@
 		>
 
 
-		{%- endif -%}
 	{%- endif -%}
-
+	
     
 
  
