--- a/app/templates/corsi.html
+++ b/app/templates/corsi.html
@@ -60,17 +60,28 @@
                                         {%- for element in attrList.values() -%}
                                         {%- if element.insertable -%}
                                         <div class="row">
-                                            <div class="col s0" style="padding-top: 25px;">
+                                            {%- if element.isMultiChoice or element.isTimedelta -%}
+                                            <div class="col s0" style="padding-top: 25px; padding-right: 0px;">
                                                 <!--icone-->
-                                               	<i class="small material-icons">
+                                                <i class="small material-icons">
+                                                    {%- if element.isTimedelta -%}   access_time
+                                                    {%- elif element.isMultiChoice -%} arrow_drop_down
+                                                    {%- endif %} 
+
+                                                </i>
+                                            </div>
+                                            <div class="input-field col s9">
+                                            {%- else -%}
+                                            <div class="input-field col s10">
+                                                <!--icone-->
+                                               	<i class="small material-icons prefix">
                                                     {%- if element.isDatetime -%}      calendar_month
                                                     {%- elif element.isTimedelta -%}   access_time
                                                     {%- elif element.isMultiChoice -%} arrow_drop_down
                                                     {%- else -%}                       text_fields
 		                                            {%- endif %} 
                                                 </i>
-                                            </div>
-                                            <div class="input-field col s8">
+                                            {%- endif -%}
                                                 <!--ho dovuto fare così per poter mettere il design carino
                                                 anche su questi timedelta!-->
                                                 {%- if element.name == 'inizioiscrizioni' or  element.name == 'scadenzaiscrizioni' -%}  
