--- a/app/templates/corso_elem.html
+++ b/app/templates/corso_elem.html
@@ -34,17 +34,31 @@
                         {%- for element in attrList.values() -%}
                         {%- if element.insertable -%}
                         <div class="row">
-                            <div class="col s0" style="padding-top: 25px;">
+                            {%- if element.isMultiChoice or element.isTimedelta -%}
+                            <div class="col s0" style="padding-top: 25px; padding-right: 0px;">
+                                 <!--icone-->
+                                 <i class="small material-icons">
+                                    {%- if element.isTimedelta -%}   access_time
+                                    {%- elif element.isMultiChoice -%} arrow_drop_down
+                                    {%- endif %} 
+
+                                 </i>
+                            </div>
+                            <div class="input-field col s9">
+                            {%- else -%}
+
+                            <div class="input-field col s10">
+                            
+
                             <!--icone-->
-                               <i class="small material-icons">
+                               <i class="small material-icons prefix">
                                 {%- if element.isDatetime -%}      calendar_month
                                 {%- elif element.isTimedelta -%}   access_time
                                 {%- elif element.isMultiChoice -%} arrow_drop_down
                                 {%- else -%}                       text_fields
                                 {%- endif %} 
                             </i>
-                        </div>
-                            <div class="input-field col s8">
+                            {%- endif -%}
                                 {%- include "form_element.html" -%}
                                 
                             </div>
@@ -64,8 +78,8 @@
                             <div class="left" style="display: block;">
                                 <form onsubmit="return confirmDelete('{{ corso.titolo  }}')" action="/elimina_corso" method="POST">
                                     <input name="idcorsoDel" type="number" style="display:none" value="{{ corso.id }}">
-                                    <button type="submit"  style="background: transparent; border: none; font-size:0; cursor: pointer">
-                                        <i  class='fa fa-trash' style="color: black; padding-left: 5px; font-size: 30px;"></i>  
+                                    <button type="submit" class="btn-floating  waves-effect waves-light deep-orange darken-3" style="background: transparent; border: none; font-size:0; cursor: pointer">
+                                        <i  class='fa fa-trash' style="color: white; ; font-size: 25px;"></i>  
                                     </button>
                                 </form>   
                             </div>
