--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -24,21 +24,19 @@
 					<div id="login" class="col s12">
 
 						<div>
-							<div class="row">
-								<br>
+							<div class="row" style="padding-top: 20px; padding-left: 15px; padding-right: 15px;">
+								
 								<form id="form_login" class="col s12" action='/login' method='POST'>
 									<div class="row">
-										<div class="col s0" style="padding-top: 25px;">
-											<i class="small material-icons">email</i>
-										</div>
-										<div class="input-field col s5">
+										<div class="input-field col s6">
+											<i class="small material-icons prefix">email</i>
+
 											<input id="email_login" name="email" type="text" class="validate">
 											<label for="email">Email</label>
 										</div>
-										<div class="col s0" style="padding-top: 25px;">
-											<i class="small material-icons">password</i>
-										</div>
-										<div class="input-field col s5">
+										<div class="input-field col s6">
+											<i class="small material-icons prefix">password</i>
+										
 											<input id="pwd_login" name="pwd" type="password" class="validate">
 											<label for="pwd">Password</label>
 										</div>
@@ -63,51 +61,47 @@
 					<div id="registrati" class="col s12">
 
 						<div>
-							<div class="row">
-								<br>
-								<form id="form_reg" class="col s12" action="/registrazione" method="POST">
+							<div class="row" style="padding-top: 20px; padding-left: 15px; padding-right: 15px;">
+								
+								<form id="form_reg" class="col s12" action="/registrazione" method="POST" >
 									<div class="row">
 										
-										<div class="col s0" style="padding-top: 25px;">
-											<i class="small material-icons">text_fields</i>
-										</div>
-										<div class="input-field col s5">
+										<div class="input-field col s6">
+											<i class="small material-icons prefix">text_fields</i>
+										
 											<input id="first_name" name="nome" type="text" class="validate" autocomplete="off">
 											<label for="first_name">First Name</label>
 										</div>
-										<div class="col s0" style="padding-top: 25px;">
-											<i class="small material-icons">text_fields</i>
-										</div>
-										<div class="input-field col s5">
+										<div class="input-field col s6">
+											<i class="small material-icons prefix">text_fields</i>
+									
 											<input id="last_name" name="cognome" type="text" class="validate" autocomplete="off">
 											<label for="last_name">Last Name</label>
 										</div>
 									</div>
 									
 									<div class="row">
-										<div class="col s0" style="padding-top: 25px;">
-											<i class="small material-icons">password</i>
-										</div>
-										<div class="input-field col s10">
+										<div class="input-field col s12">
+											<i class="small material-icons prefix">password</i>
+										
 											<input id="password" name="pwd" type="password" class="validate" autocomplete="off">
 											<label for="password">Password</label>
 										</div>
 									</div>
 									<div class="row">
-										<div class="col s0" style="padding-top: 25px;">
-											<i class="small material-icons">email</i>
-										</div>
-										<div class="input-field col s10">
+										
+
+										<div class="input-field col s12">
+											<i class="small material-icons prefix">email</i>
 											<input id="email" name="email" type="email" class={%- if registration_error
 												-%}"invalid"{%- else -%}"validate"{%- endif -%} autocomplete="off">
 											<label for="email">Email</label>
 										</div>
 									</div>
 									<div class="row">
-										<div class="col s0" style="padding-top: 25px;">
-											<i class="small material-icons">calendar_month</i>
-										</div>
-										<div class="input-field col s10">
+										<div class="input-field col s12">
+											<i class="small material-icons prefix">calendar_month</i>
+										
 											<input id="data_nascita" name="dataN" type="text" class="datepicker validate" autocomplete="off">
 											<label for="data_nascita">Data nascita</label>
 										</div>
