--- a/app/templates/lezioni.html
+++ b/app/templates/lezioni.html
@@ -35,7 +35,7 @@
                             <div class="col s11 offset-s1">                
                                 <div class="row">
                                     {%- set class_name = 'Lezioni' -%}
-                                    <form id="nuova_lezione_insert" class="col s12" action="/insert" method="POST">
+                                    <form id="nuova_lezione_insert" name="nuova_lezione_insert" onsubmit="return validateForm()"  class="col s12" action="/insert" method="POST">
                                         
                                         {%- for element in attrLezioni.values() -%}
                                         {%- if element.insertable -%}
