--- a/app/templates/lezioni.html
+++ b/app/templates/lezioni.html
@@ -29,7 +29,7 @@
             <p style="font-size: 20px;">{{ msg_error }}</p>
             </div>
             <div class="modal-footer">
-            <a href="#!" class="modal-close waves-effect waves-orange btn-flat">OK</a>
+            <a href="/lezioni" class="modal-close waves-effect waves-orange btn-flat">OK</a>
             </div>
         </div>
 
@@ -43,7 +43,7 @@
             <p style="font-size: 20px;">{{ msg_error }}</p>
             </div>
             <div class="modal-footer">
-            <a href="#!" class="modal-close waves-effect waves-orange btn-flat">OK</a>
+            <a href="/lezioni" class="modal-close waves-effect waves-orange btn-flat">OK</a>
             </div>
         </div>
 
